Volume drawing: Assert hit when saving Volume Cube node output #114151

Closed
opened 2023-10-25 16:02:51 +02:00 by Lukas Tönne · 1 comment
Member

System Information
Operating system: Linux-6.5.7-gentoo-x86_64-AMD_Ryzen_9_7950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.7-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1

Blender Version
Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: (newest version of Blender that worked as expected)

Short description of error
Using the Volume Cube geometry node and saving a file in debug mode triggers an assert in drawing code.

BLI_assert failed: source/blender/gpu/intern/gpu_texture.cc:472, GPU_texture_create_view(), at 'GPU_texture_usage(src) & GPU_TEXTURE_USAGE_MIP_SWIZZLE_VIEW'
Source texture of TextureView must have GPU_TEXTURE_USAGE_MIP_SWIZZLE_VIEW usage flag.

Exact steps for others to reproduce the error
Open attached file and enable the modifier, or:

  • Add empty volume object
  • Add a geometry nodes modifier
  • Add a Volume Cube node
  • Save the file

Screenshot_20231025_160259

**System Information** Operating system: Linux-6.5.7-gentoo-x86_64-AMD_Ryzen_9_7950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.7-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1 **Blender Version** Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: (newest version of Blender that worked as expected) **Short description of error** Using the _Volume Cube_ geometry node and saving a file in debug mode triggers an assert in drawing code. > BLI_assert failed: source/blender/gpu/intern/gpu_texture.cc:472, GPU_texture_create_view(), at 'GPU_texture_usage(src) & GPU_TEXTURE_USAGE_MIP_SWIZZLE_VIEW' > Source texture of TextureView must have GPU_TEXTURE_USAGE_MIP_SWIZZLE_VIEW usage flag. **Exact steps for others to reproduce the error** Open attached file and enable the modifier, or: - Add empty volume object - Add a geometry nodes modifier - Add a _Volume Cube_ node - Save the file ![Screenshot_20231025_160259](/attachments/e56d7cef-5d44-4615-8ec9-c9e5b36732d4)
Lukas Tönne added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-25 16:02:52 +02:00

Reproduced from default.blend

BLI_assert failed: C:\s\blendir\source\blender\source\blender\gpu\intern\gpu_texture.cc:474, GPU_texture_create_view(), at 'GPU_texture_usage(src) & GPU_TEXTURE_USAGE_MIP_SWIZZLE_VIEW'
Source texture of TextureView must have GPU_TEXTURE_USAGE_MIP_SWIZZLE_VIEW usage flag.

Operating system: Windows-10-10.0.23570-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.09
version: 4.1.0 Alpha git main commit 247491ef0f svn 63536

Reproduced from default.blend BLI_assert failed: C:\s\blendir\source\blender\source\blender\gpu\intern\gpu_texture.cc:474, GPU_texture_create_view(), at 'GPU_texture_usage(src) & GPU_TEXTURE_USAGE_MIP_SWIZZLE_VIEW' Source texture of TextureView must have GPU_TEXTURE_USAGE_MIP_SWIZZLE_VIEW usage flag. Operating system: Windows-10-10.0.23570-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.09 version: 4.1.0 Alpha git main commit 247491ef0f4241415e1e1017f64b81ebd30ddc29 svn 63536
Iliya Katushenock added
Module
EEVEE & Viewport
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-10-26 13:26:08 +02:00
Jacques Lucke added
Priority
High
and removed
Priority
Normal
labels 2023-11-21 14:38:18 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-24 16:52:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114151
No description provided.